--- a/index.html
+++ b/index.html
@@ -87,41 +87,85 @@
 
     <!-- ## Start of sections for each part of the page ## -->
 
-    <section class="cv-content">
-      <div class="cv-wrapper">
+    <section id="section0" class="section cv-wrapper">
+      <div class="section-content">
         <div class="cv-columns">
           <ul class="cv-work">
-            <li class="cv-work-position">
-              <h3 class="cv-work-title">Junior Webbutvecklare</h3>
+            <h2>Arbetserfarenheter</h2>
+            <li class="cv-position">
+              <h3 class="cv-title">Junior Webbutvecklare</h3>
               <h4 class="cv-workplace">Webblandskapet</h4>
-              <p class="cv-work-duration">2023-05 - 2024-09</p>
-              <p class="cv-work-description"></p>
-              <ul class="cv-work-skills">Färdigheter
-                <li class="cv-work-skill">HTML</li>
-                <li class="cv-work-skill">CSS</li>
-                <li class="cv-work-skill">Sass</li>
-                <li class="cv-work-skill">JavaScript</li>
-                <li class="cv-work-skill">Jquery</li>
-                <li class="cv-work-skill">PHP</li>
-                <li class="cv-work-skill">Linux</li>
-                <li class="cv-work-skill">Docker</li>
-                <li class="cv-work-skill">Zoezi</li>
-                <li class="cv-work-skill">Eline</li>
-                <li class="cv-work-skill">Git</li>
-                <li class="cv-work-skill"></li>
-
-
-
-              </ul>
+              <p class="cv-duration">2023-05 - 2024-09</p>
+              <p class="cv-description">Arbetet har bestått i blandade projekt, supportärenden, </p>
+              <div class="cv-skills-container">
+                <h4>Färdigheter</h4>
+                <ul class="cv-skills">
+                  <li class="cv-skill">HTML</li>
+                  <li class="cv-skill">CSS</li>
+                  <li class="cv-skill">Sass</li>
+                  <li class="cv-skill">JavaScript</li>
+                  <li class="cv-skill">Jquery</li>
+                  <li class="cv-skill">PHP</li>
+                  <li class="cv-skill">Linux</li>
+                  <li class="cv-skill">Docker</li>
+                  <li class="cv-skill">Zoezi</li>
+                  <li class="cv-skill">Eline</li>
+                  <li class="cv-skill">Git</li>
+                  <li class="cv-skill">Agile utveckling</li>
+                </ul>
+              </div>
             </li>
-            </>
+            </h>
         </div>
         <div class="cv-columns">
-          <div class="cv-studies"></div>
+          <div class="cv-studies">
+            <h2>Utbildningar</h2>
+            <li class="cv-program">
+              <h3 class="cv-title">Webbutveckling</h3>
+              <h4 class="cv-school">Linnéuniversitetet</h4>
+              <p class="cv-duration">2021-Nuvarande</p>
+              <p class="cv-description">Studerat från och till vid sidan av arbete</p>
+              <div class="cv-skills-container">
+                <h5>Färdigheter</h5>
+                <ul class="cv-skills">
+                  <li class="cv-skill">Javascript</li>
+                  <li class="cv-skill">Javascript</li>
+                  <li class="cv-skill">Javascript</li>
+                  <li class="cv-skill">Javascript</li>
+                  <li class="cv-skill">OOP</li>
+                </ul>
+              </div>
+            </li>
+          </div>
         </div>
 
       </div>
     </section>
+
+    <section id="section1" class="section case-wrapper">
+      <div class="section-content">
+        <h2>Cases</h2>
+      </div>
+    </section>
+
+    <section id="section2" class="section project-wrapper">
+      <div class="section-content">
+        <h2>Projekt</h2>
+      </div>
+    </section>
+
+    <section id="section3" class="section about-wrapper">
+      <div class="section-content">
+        <h2>Om Jens</h2>
+      </div>
+    </section>
+
+    <section id="section4" class="section contact-wrapper">
+      <div class="section-content">
+        <h2>Kontakt</h2>
+      </div>
+    </section>
+
 
     <!-- ## Start of Footer ## -->
 
@@ -145,13 +189,25 @@
 </html>
 
 
-<!-- ## Following is a template for the cv section ##
+<!-- ## Following are templates for the cv section ##
 
       <li class="cv-work-position">
-        <h3 class="cv-work-title">Title</h3>
+        <h3 class="cv-title">Title</h3>
         <h4 class="cv-workplace">Company</h4>
-        <p class="cv-work-duration">2021 - 2022</p>
-        <p class="cv-work-description">Description</p>
+        <p class="cv-duration">2021 - 2022</p>
+        <p class="cv-description">Description</p>
+      </li>
+
+      <li class="cv-studies">
+        <h3 class="cv-title">Title</h3>
+        <h4 class="cv-school">School</h4>
+        <p class="cv-duration">2021-2022</p>
+        <p class="cv-description"></p>
+        <div class="cv-skills-container">
+          <ul class="cv-skills">
+            <li class="cv-skill"></li>
+          </ul>
+        </div>
       </li>
 
 -->
