text content + class wip

--- a/index.html
+++ b/index.html
@@ -157,13 +157,38 @@
 
     <section id="section3" class="section about-wrapper">
       <div class="section-content">
-        <h2>Om Jens</h2>
+        <h2>Om mig</h2>
+        <div class="about-work">
+          <h3>På arbetsplatsen</h3>
+          <p>Jag trivs med att arbeta både i team och på egen hand.</p>
+          <p>Det bästa med att jobba i ett team är att man hjälps åt och tar nytta av varandras styrkor, vilket medför att ett väl genomarbetat team kompletterar varandra väldigt bra och ser till att alla kommer till sin fulla rätt.</p>
+          <p>Att arbeta själv medför andra fördelar, man får följa sin egen struktur och man får en annan helhetsbild över vad man arbetar med, vilket kan leda till en djupare förståelse över alla processer som är en del av arbetet.</p>
+        </div>
+        <div class="about-family">
+          <h3>Familj och vänner</h3>
+          <p>Jag bor för tillfället i centrala Norrköping, tillsammans med min fru Vannessa.</p>
+          <p>Min förlängda familj bor alla i Norrköpings närområde, vilket möjliggör att ses ofta.</p>
+          <p>Jag har genom åren samlat på mig många bekanta runtom i Sverige och Europa, men de jag umgås med finns inom en timmes restid.</p>
+        </div>
+        <div class="about-freetime">
+          <h3>På fritiden</h3>
+          <p>Min fritid består främst av att träffa vänner och familj, men när tid blir över så finns det ett par fritidsintressen som står över alla andra.</p>
+          <p>Dessa är spelhobbykulturen och friluftsliv</p>
+          <h4>Spelhobbyn</h4>
+          <p>Jag är med och driver Spelens Hus i Norrköping, där jag ingår i styrelsen och ansvarar för ekonomin, samt deras hemsida. utöver att vara där och spela någon gång ibland.</p>
+          <h4>Friluftsliv</h4>
+          <p>Att vara ute i skog och mark är ett väldigt stort intresse som jag haft med mig hela livet. Nu för tiden brukar jag försöka komma iväg på en lite större vandring varje sommar.</p>
+          <p>Det är inte omöjligt att man tar sig ut i skogen över en helg ibland heller.</p>
+        </div>
       </div>
     </section>
 
     <section id="section4" class="section contact-wrapper">
       <div class="section-content">
         <h2>Kontakt</h2>
+        
+        <p>Enklast nås jag via <a href="mailto:osterqvist@gmail.com">email</a></p>
+        <p>Man kan också försöka ringa <a href="tel:+46768026366">mig</a>, men jag har oftast fokusläge igång, vilket gör att jag inte hör telefonen.</p>
       </div>
     </section>
 
