--- a/index.html
+++ b/index.html
@@ -76,12 +76,10 @@
     <!-- ## Start of Main ## -->
 
     <main>
-      <div class="text-container">
+      <div id="MainText" class="text-container">
         <h1 class="title">Jens Österqvist</h1>
         <p>Välkommen till min portfolio</p>
-        <p>Denna single page application (SPA) är uppbyggd med ren html, css och javascript. Andra projekt innehåller
-          javascript, php, react, sql, sass, med
-          mera. </p>
+        <p>Jag brinner för programmering, teknik och naturen.</p>
       </div>
     </main>
 
@@ -92,50 +90,11 @@
         <div class="cv-columns">
           <ul id="cv-work" class="cv-work">
             <h2>Arbetserfarenheter</h2>
-            <li class="cv-position">
-              <h3 class="cv-title">Junior Webbutvecklare</h3>
-              <h4 class="cv-workplace">Webblandskapet</h4>
-              <p class="cv-duration">2023-05 - 2024-09</p>
-              <p class="cv-description">Arbetet har bestått i blandade projekt, supportärenden, </p>
-              <div class="cv-skills-container">
-                <h4>Färdigheter</h4>
-                <ul class="cv-skills">
-                  <li class="cv-skill">HTML</li>
-                  <li class="cv-skill">CSS</li>
-                  <li class="cv-skill">Sass</li>
-                  <li class="cv-skill">JavaScript</li>
-                  <li class="cv-skill">Jquery</li>
-                  <li class="cv-skill">PHP</li>
-                  <li class="cv-skill">Linux</li>
-                  <li class="cv-skill">Docker</li>
-                  <li class="cv-skill">Zoezi</li>
-                  <li class="cv-skill">Eline</li>
-                  <li class="cv-skill">Git</li>
-                  <li class="cv-skill">Agile utveckling</li>
-                </ul>
-              </div>
-            </li>
           </ul>
         </div>
         <div class="cv-columns">
           <div id="cv-studies" class="cv-studies">
             <h2>Utbildningar</h2>
-            <li class="cv-program">
-              <h3 class="cv-title">Webbutveckling</h3>
-              <h4 class="cv-school">Linnéuniversitetet</h4>
-              <p class="cv-duration">2021-Nuvarande</p>
-              <p class="cv-description">Studerat från och till vid sidan av arbete</p>
-              <div class="cv-skills-container">
-                <h4>Färdigheter</h4>
-                <ul class="cv-skills">
-                  <li class="cv-skill">Javascript</li>
-                  <li class="cv-skill">Javascript</li>
-                  <li class="cv-skill">Javascript</li>
-                  <li class="cv-skill">Javascript</li>
-                  <li class="cv-skill">OOP</li>
-                </ul>
-              </div>
-            </li>
           </div>
         </div>
 
@@ -145,13 +104,25 @@
     <section id="section1" class="section case-wrapper">
       <div class="section-content">
         <h2>Cases</h2>
-        <experience-card></experience-card>
+        <p>Nedan följer projekt jag varit del av under min tid hos Webblandskapet.</p>
+        <ul class="wl-cases">
+          <li class="wl-case">Malmö Chokladfabrik</li>
+          <li class="wl-case">Fitzpatrick</li>
+          <li class="wl-case">Orbotech</li>
+          <li class="wl-case"></li>
+        </ul>
       </div>
     </section>
 
     <section id="section2" class="section project-wrapper">
       <div class="section-content">
         <h2>Projekt</h2>
+        <p>Nedan följer exempel på projekt jag driver framåt på min fritid.</p>
+
+        <ul class="byO-projects">
+          <li class="byO-project">Spelens Hus i Norrköping</li>
+          <li class="byO-project"></li>
+        </ul>
       </div>
     </section>
 
