--- a/index.html
+++ b/index.html
@@ -105,11 +105,87 @@
       <div class="section-content">
         <h2>Cases</h2>
         <p>Nedan följer projekt jag varit del av under min tid hos Webblandskapet.</p>
+        <p>Det första tre sidorna är över e-lines, vilka jag sedan återskapat den design vår grafiker tillsammans med kund kommit överens om, primära språk använda är jQuery samt SASS.</p>
         <ul class="wl-cases">
-          <li class="wl-case">Malmö Chokladfabrik</li>
-          <li class="wl-case">Fitzpatrick</li>
-          <li class="wl-case">Orbotech</li>
-          <li class="wl-case"></li>
+          <li class="wl-case">
+            <div class="case-container">
+              <div class="col img-col">
+                <img class="case-img desktop-img" src="./src/assets/malmo-desktop.png" alt="Bild på Malmö chokladfabriks återförsäljarsida i desktopmiljö.">
+                <img class="case-img mobile-img" src="./src/assets/malmo-mobil.png" alt="Bild på Malmö chokladfabriks återförsäljarsida i mobilmiljö.">
+              </div>
+              <div class="col text-col">
+                <div class="info">
+                  <h3 class="info-header">Malmö Chokladfabrik</h3>
+                  <p class="info-text">Till Malmö Chokladfabrik har många instatser blivit gjorda, jag har fått mobilanpassa deras webshop gentemot återförsäljare, ta fram funktionalitet för att visa ifall en vara är ekologisk, fairtrade eller vegansk,vid inloggad återförsäljade så har funktionalitet för att från produktlistan välja antal varor att lägga i varukorgen. </p>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="wl-case">
+            <div class="case-container">
+              <div class="col img-col">
+                <a href="https://e-line.fitzpatrick.se/SE/" target="_blank">
+                  <img class="case-img desktop-img" src="/src/assets/fitz-start.png" alt="Fitzpatrick startsida">
+                </a>
+                <a href="https://e-line.fitzpatrick.se/SE/" target="_blank">
+                  <img class="case-img desktop-img" src="/src/assets/fitz-menu.png" alt="Fitzpatrick meny">
+                </a>
+
+              </div>
+              <div class="col text-col">
+                <div class="info">
+                  <h3 class="info-header">Fitzpatrick</h3>
+                  <p class="info-text">Här önskades en total omarbetning av hemsidan. Bland annat en megameny täckandes 3 nivåer med innehåll, samt ett hero-bildspel. </p>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="wl-case">
+            <div class="case-container">
+              <div class="col img-col">
+                <a href="">
+                  <img class="case-img desktop-img" src="/src/assets/bra-desktop.png" alt="">
+                </a>
+                <a href="">
+                  <img class="case-img mobile-img" src="/src/assets/bra-mobil.png" alt="">
+                </a>
+              </div>
+              <div class="col text-col">
+                <div class="info">
+                  <h3 class="info-header">Bra Scandinavia</h3>
+                  <div class="info-text">
+                    <p>Bra Scandinavia hade en önskan om att kunna gå ifrån sin tidigare wordpress-sida, till en specialanpassad e-line. De var fortfarande bväldigt nöjda med sin grafiska layout på sin wordpress, så jag fick i uppdrag att återskapa denna till deras nya sida. </p>
+                    <p>Detta löste jag genom att skapa html templates för att efterlikna de wordpress "block" de var vana att arbeta med, och ge dem möjligheten att enkelt kunna fortsätta uppdatera sin sida.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="wl-case">
+            <div class="case-container">
+              <div class="col img-col">
+                <a href="">
+                  <img class="case-img desktop-img" src="/src/assets/sture-start.png" alt="Sturebadets startsida">
+                </a>
+                <a href="">
+                  <img class="case-img desktop-img" src="/src/assets/sture-behandlingar.png" alt="sturebadets behandlingssida">
+                </a>
+                <a href="">
+                  <img class="case-img mobile-img" src="/src/assets/sture-mobil.png" alt="sturebadets mobilsida">
+                </a>
+              </div>
+              <div class="col text-col">
+                <div class="info">
+                  <h3 class="info-header">Sturebadet</h3>
+                  <div class="info-text">
+                    <p>Sturebadets hemsida är uppbyggt igenom Zoezi, en webplattform specifikt inriktad mot att skapa funktionalba hemsidor åt gym och friskvårdsföretag.</p>
+                    <p>Här jag har byggt webkomponenter för att hantera deras bokningssystem, integration mellan kassa och kundprofil, en separat sida som styr deras digitala skärmar på plats i sina lokaler.</p>
+                    <p>Här får man arbeta med ren html, css och javascript.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
         </ul>
       </div>
     </section>
@@ -175,7 +251,7 @@
           <div class="social"><a href="#">X</a></div>
         </div>
         <div class="footer-area right">
-          <p class="cc">Produced by: Jens Österqvist </>
+          <p class="cc">Produced by: Jens Österqvist </p>
         </div>
       </div>
     </footer>
