overlay with on-click functionality added

--- a/index.html
+++ b/index.html
@@ -64,13 +64,14 @@
           </ul>
         </div>
       </nav>
-      <nav class="menu right">
+<!--       <nav class="menu right">
         <div class="menu-container">
           <ul>
 
           </ul>
         </div>
-      </nav>
+      </nav> -->
+      <div id="overlay"></div>
     </header>
 
     <!-- ## Start of Main ## -->
@@ -81,6 +82,7 @@
         <p>Välkommen till min portfolio</p>
         <p>Jag brinner för programmering, teknik och naturen.</p>
       </div>
+
     </main>
 
     <!-- ## Start of sections for each part of the page ## -->
@@ -110,8 +112,12 @@
           <li class="wl-case">
             <div class="case-container">
               <div class="col img-col">
-                <img class="case-img desktop-img" src="./src/assets/malmo-desktop.png" alt="Bild på Malmö chokladfabriks återförsäljarsida i desktopmiljö.">
-                <img class="case-img mobile-img" src="./src/assets/malmo-mobil.png" alt="Bild på Malmö chokladfabriks återförsäljarsida i mobilmiljö.">
+                <a href="https://shop.malmochokladfabrik.se/">
+                  <img class="case-img desktop-img" src="./src/assets/malmo-desktop.png" alt="Bild på Malmö chokladfabriks återförsäljarsida i desktopmiljö.">
+                </a>
+                <a href="https://shop.malmochokladfabrik.se/">
+                  <img class="case-img mobile-img" src="./src/assets/malmo-mobil.png" alt="Bild på Malmö chokladfabriks återförsäljarsida i mobilmiljö.">
+                </a>
               </div>
               <div class="col text-col">
                 <div class="info">
@@ -173,7 +179,7 @@
                 <a href="">
                   <img class="case-img mobile-img" src="/src/assets/sture-mobil.png" alt="sturebadets mobilsida">
                 </a>
-              </div>
+              </div> 
               <div class="col text-col">
                 <div class="info">
                   <h3 class="info-header">Sturebadet</h3>
