case img toggle done

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <p>Välkommen till min portfolio</p>
           <p>Jag brinner för programmering, teknik och naturen.</p>
           <p>
-            Denna portfolio är tänkt som en levande sådan, och kommer fylls på
+            Denna portfolio är tänkt som en levande sådan, och kommer fyllas på
             med nya projekt med tiden.
           </p>
         </div>
@@ -120,20 +120,24 @@
             <li class="wl-case">
               <div class="case-container">
                 <div class="col img-col">
-                  <a href="https://shop.malmochokladfabrik.se/">
-                    <img
-                      class="case-img desktop-img"
-                      src="./src/assets/malmo-desktop.png"
-                      alt="Bild på Malmö chokladfabriks återförsäljarsida i desktopmiljö."
-                    />
-                  </a>
-                  <a href="https://shop.malmochokladfabrik.se/">
-                    <img
-                      class="case-img mobile-img"
-                      src="./src/assets/malmo-mobil.png"
-                      alt="Bild på Malmö chokladfabriks återförsäljarsida i mobilmiljö."
-                    />
-                  </a>
+                  <span id="left" class="left">L</span>
+                  <div class="shown-img">
+                    <a href="https://shop.malmochokladfabrik.se/">
+                      <img
+                        class="case-img desktop-img"
+                        src="./src/assets/malmo-desktop.png"
+                        alt="Bild på Malmö chokladfabriks återförsäljarsida i desktopmiljö."
+                      />
+                    </a>
+                    <a href="https://shop.malmochokladfabrik.se/">
+                      <img
+                        class="case-img mobile-img"
+                        src="./src/assets/malmo-mobil.png"
+                        alt="Bild på Malmö chokladfabriks återförsäljarsida i mobilmiljö."
+                      />
+                    </a>
+                  </div>
+                  <span id="right" class="right">R</span>
                 </div>
                 <div class="col text-col">
                   <div class="info">
