case img shift done

--- a/index.html
+++ b/index.html
@@ -124,14 +124,14 @@
                   <div class="shown-img">
                     <a href="https://shop.malmochokladfabrik.se/">
                       <img
-                        class="case-img desktop-img"
+                        class="case-img first"
                         src="./src/assets/malmo-desktop.png"
                         alt="Bild på Malmö chokladfabriks återförsäljarsida i desktopmiljö."
                       />
                     </a>
                     <a href="https://shop.malmochokladfabrik.se/">
                       <img
-                        class="case-img mobile-img"
+                        class="case-img"
                         src="./src/assets/malmo-mobil.png"
                         alt="Bild på Malmö chokladfabriks återförsäljarsida i mobilmiljö."
                       />
@@ -157,24 +157,28 @@
             <li class="wl-case">
               <div class="case-container">
                 <div class="col img-col">
-                  <a href="https://e-line.fitzpatrick.se/SE/" target="_blank">
-                    <img
-                      class="case-img desktop-img"
-                      src="/src/assets/fitz-start.png"
-                      alt="Fitzpatrick startsida"
-                    />
-                  </a>
-                  <a href="https://e-line.fitzpatrick.se/SE/" target="_blank">
-                    <img
-                      class="case-img desktop-img"
-                      src="/src/assets/fitz-menu.png"
-                      alt="Fitzpatrick meny"
-                    />
-                  </a>
+                  <span id="left" class="left">L</span>
+                  <img
+                    class="case-img first"
+                    src="/src/assets/fitz-start.png"
+                    alt="Fitzpatrick startsida"
+                  />
+                  <img
+                    class="case-img"
+                    src="/src/assets/fitz-menu.png"
+                    alt="Fitzpatrick meny"
+                  />
+                  <span id="right" class="right">R</span>
                 </div>
                 <div class="col text-col">
                   <div class="info">
-                    <h3 class="info-header">Fitzpatrick</h3>
+                    <h3 class="info-header">
+                      <a
+                        href="https://e-line.fitzpatrick.se/SE/"
+                        target="_blank"
+                        >Fitzpatrick</a
+                      >
+                    </h3>
                     <p class="info-text">
                       Här önskades en total omarbetning av hemsidan. Bland annat
                       en megameny täckandes 3 nivåer med innehåll, samt ett
@@ -187,20 +191,18 @@
             <li class="wl-case">
               <div class="case-container">
                 <div class="col img-col">
-                  <a href="">
-                    <img
-                      class="case-img desktop-img"
-                      src="/src/assets/bra-desktop.png"
-                      alt=""
-                    />
-                  </a>
-                  <a href="">
-                    <img
-                      class="case-img mobile-img"
-                      src="/src/assets/bra-mobil.png"
-                      alt=""
-                    />
-                  </a>
+                  <span id="left" class="left">L</span>
+                  <img
+                    class="case-img first"
+                    src="/src/assets/bra-desktop.png"
+                    alt=""
+                  />
+                  <img
+                    class="case-img"
+                    src="/src/assets/bra-mobil.png"
+                    alt=""
+                  />
+                  <span id="right" class="right">R</span>
                 </div>
                 <div class="col text-col">
                   <div class="info">
@@ -227,27 +229,23 @@
             <li class="wl-case">
               <div class="case-container">
                 <div class="col img-col">
-                  <a href="">
-                    <img
-                      class="case-img desktop-img"
-                      src="/src/assets/sture-start.png"
-                      alt="Sturebadets startsida"
-                    />
-                  </a>
-                  <a href="">
-                    <img
-                      class="case-img desktop-img"
-                      src="/src/assets/sture-behandlingar.png"
-                      alt="sturebadets behandlingssida"
-                    />
-                  </a>
-                  <a href="">
-                    <img
-                      class="case-img mobile-img"
-                      src="/src/assets/sture-mobil.png"
-                      alt="sturebadets mobilsida"
-                    />
-                  </a>
+                  <span id="left" class="left">L</span>
+                  <img
+                    class="case-img first"
+                    src="/src/assets/sture-start.png"
+                    alt="Sturebadets startsida"
+                  />
+                  <img
+                    class="case-img"
+                    src="/src/assets/sture-behandlingar.png"
+                    alt="sturebadets behandlingssida"
+                  />
+                  <img
+                    class="case-img"
+                    src="/src/assets/sture-mobil.png"
+                    alt="sturebadets mobilsida"
+                  />
+                  <span id="right" class="right">R</span>
                 </div>
                 <div class="col text-col">
                   <div class="info">
