--- a/index.html
+++ b/index.html
@@ -120,28 +120,34 @@
             <li class="wl-case">
               <div class="case-container">
                 <div class="col img-col">
-                  <span id="left" class="left">L</span>
+                  <span id="left" class="left material-symbols-outlined"
+                    >chevron_left</span
+                  >
                   <div class="shown-img">
-                    <a href="https://shop.malmochokladfabrik.se/">
-                      <img
-                        class="case-img first"
-                        src="./src/assets/malmo-desktop.png"
-                        alt="Bild på Malmö chokladfabriks återförsäljarsida i desktopmiljö."
-                      />
-                    </a>
-                    <a href="https://shop.malmochokladfabrik.se/">
-                      <img
-                        class="case-img"
-                        src="./src/assets/malmo-mobil.png"
-                        alt="Bild på Malmö chokladfabriks återförsäljarsida i mobilmiljö."
-                      />
-                    </a>
+                    <img
+                      class="case-img first"
+                      src="./src/assets/malmo-desktop.png"
+                      alt="Bild på Malmö chokladfabriks återförsäljarsida i desktopmiljö."
+                    />
+                    <img
+                      class="case-img"
+                      src="./src/assets/malmo-mobil.png"
+                      alt="Bild på Malmö chokladfabriks återförsäljarsida i mobilmiljö."
+                    />
                   </div>
-                  <span id="right" class="right">R</span>
+                  <span id="right" class="right material-symbols-outlined"
+                    >chevron_right</span
+                  >
                 </div>
                 <div class="col text-col">
                   <div class="info">
-                    <h3 class="info-header">Malmö Chokladfabrik</h3>
+                    <h3 class="info-header">
+                      <a
+                        href="https://shop.malmochokladfabrik.se/"
+                        target="_blank"
+                        >Malmö Chokladfabrik</a
+                      >
+                    </h3>
                     <p class="info-text">
                       Till Malmö Chokladfabrik har många instatser blivit
                       gjorda, jag har fått mobilanpassa deras webshop gentemot
@@ -157,18 +163,24 @@
             <li class="wl-case">
               <div class="case-container">
                 <div class="col img-col">
-                  <span id="left" class="left">L</span>
-                  <img
-                    class="case-img first"
-                    src="/src/assets/fitz-start.png"
-                    alt="Fitzpatrick startsida"
-                  />
-                  <img
-                    class="case-img"
-                    src="/src/assets/fitz-menu.png"
-                    alt="Fitzpatrick meny"
-                  />
-                  <span id="right" class="right">R</span>
+                  <span id="left" class="left material-symbols-outlined"
+                    >chevron_left</span
+                  >
+                  <div class="shown-img">
+                    <img
+                      class="case-img first"
+                      src="/src/assets/fitz-start.png"
+                      alt="Fitzpatrick startsida"
+                    />
+                    <img
+                      class="case-img"
+                      src="/src/assets/fitz-menu.png"
+                      alt="Fitzpatrick meny"
+                    />
+                  </div>
+                  <span id="right" class="right material-symbols-outlined"
+                    >chevron_right</span
+                  >
                 </div>
                 <div class="col text-col">
                   <div class="info">
@@ -180,7 +192,7 @@
                       >
                     </h3>
                     <p class="info-text">
-                      Här önskades en total omarbetning av hemsidan. Bland annat
+                      Här önskades stora förändringar av hemsidan. Bland annat
                       en megameny täckandes 3 nivåer med innehåll, samt ett
                       hero-bildspel.
                     </p>
@@ -191,22 +203,32 @@
             <li class="wl-case">
               <div class="case-container">
                 <div class="col img-col">
-                  <span id="left" class="left">L</span>
-                  <img
-                    class="case-img first"
-                    src="/src/assets/bra-desktop.png"
-                    alt=""
-                  />
-                  <img
-                    class="case-img"
-                    src="/src/assets/bra-mobil.png"
-                    alt=""
-                  />
-                  <span id="right" class="right">R</span>
+                  <span id="left" class="left material-symbols-outlined"
+                    >chevron_left</span
+                  >
+                  <div class="shown-img">
+                    <img
+                      class="case-img first"
+                      src="/src/assets/bra-desktop.png"
+                      alt=""
+                    />
+                    <img
+                      class="case-img"
+                      src="/src/assets/bra-mobil.png"
+                      alt=""
+                    />
+                  </div>
+                  <span id="right" class="right material-symbols-outlined"
+                    >chevron_right</span
+                  >
                 </div>
                 <div class="col text-col">
                   <div class="info">
-                    <h3 class="info-header">Bra Scandinavia</h3>
+                    <h3 class="info-header">
+                      <a href="http://www.brascandinavia.se" target="_blank"
+                        >Bra Scandinavia</a
+                      >
+                    </h3>
                     <div class="info-text">
                       <p>
                         Bra Scandinavia hade en önskan om att kunna gå ifrån sin
@@ -229,41 +251,53 @@
             <li class="wl-case">
               <div class="case-container">
                 <div class="col img-col">
-                  <span id="left" class="left">L</span>
-                  <img
-                    class="case-img first"
-                    src="/src/assets/sture-start.png"
-                    alt="Sturebadets startsida"
-                  />
-                  <img
-                    class="case-img"
-                    src="/src/assets/sture-behandlingar.png"
-                    alt="sturebadets behandlingssida"
-                  />
-                  <img
-                    class="case-img"
-                    src="/src/assets/sture-mobil.png"
-                    alt="sturebadets mobilsida"
-                  />
-                  <span id="right" class="right">R</span>
+                  <span id="left" class="left material-symbols-outlined"
+                    >chevron_left</span
+                  >
+                  <div class="shown-img">
+                    <img
+                      class="case-img first"
+                      src="/src/assets/sture-start.png"
+                      alt="Sturebadets startsida"
+                    />
+                    <img
+                      class="case-img"
+                      src="/src/assets/sture-behandlingar.png"
+                      alt="sturebadets behandlingssida"
+                    />
+                    <img
+                      class="case-img"
+                      src="/src/assets/sture-mobil.png"
+                      alt="sturebadets mobilsida"
+                    />
+                  </div>
+                  <span id="right" class="right material-symbols-outlined"
+                    >chevron_right</span
+                  >
                 </div>
                 <div class="col text-col">
                   <div class="info">
-                    <h3 class="info-header">Sturebadet</h3>
+                    <h3 class="info-header">
+                      <a href="http://www.sturebadet.se" target="_blank"
+                        >Sturebadet</a
+                      >
+                    </h3>
                     <div class="info-text">
                       <p>
                         Sturebadets hemsida är uppbyggt igenom Zoezi, en
                         webplattform specifikt inriktad mot att skapa
-                        funktionalba hemsidor åt gym och friskvårdsföretag.
+                        funktionella hemsidor åt gym och friskvårdsföretag.
                       </p>
                       <p>
                         Här jag har byggt webkomponenter för att hantera deras
                         bokningssystem, integration mellan kassa och kundprofil,
                         en separat sida som styr deras digitala skärmar på plats
-                        i sina lokaler.
+                        i deras lokaler.
                       </p>
                       <p>
-                        Här får man arbeta med ren html, css och javascript.
+                        Här får man arbeta med ren html, css och javascript, då
+                        Zoezis verktyg internt sedan väver ihop det till en vue
+                        fil.
                       </p>
                     </div>
                   </div>
@@ -276,14 +310,48 @@
 
       <section id="section2" class="section project-wrapper">
         <div class="section-content">
-          <h2>Projekt</h2>
+          <h2>FreelanceProjekt</h2>
           <p>
             Nedan följer exempel på projekt jag driver framåt på min fritid.
           </p>
 
           <ul class="byO-projects">
-            <li class="byO-project">Spelens Hus i Norrköping</li>
-            <li class="byO-project"></li>
+            <li class="byO-project">Spelens Hus i Norrköping
+              <div class="byO-container">
+                <div class="byO-img">
+                  <img
+                    src="/src/assets/spelens-hus-norrkoping.png"
+                    alt="Spelens Hus i Norrköping"
+                  />
+                </div>
+                <div class="byO-text">
+                  <p>
+                    Jag har jobbat med att bygga en hemsida för Spelens Hus
+                    i Norrköping. Detta projekt har varit en del av mitt
+                    freelanceportfolio, och jag har även arbetat med att
+                    ändra och uppdatera hemsidan på egen hand.
+                  </p>
+                  <p>
+                    Hemsidan har använt Wordpress som sin CMS, och har
+                    byggt egna block för att synliggöra de behov som fanns inför Augustifesten i Norrköping, efter Kulturnatten kommer jag påbörja arbetet med att skapa ett nytt tema för Spelens hus och mallar för de olika typer av block som kommer populera hemsidan.</p>
+              </div>
+            </li>
+            <li class="byO-project">
+              <p>In the works</p>
+              <ul>
+                <li>Bakgrundsväljare till portfolio</li>
+                <li>To-do list som skall ersätta denna lista</li>
+                <li>
+                  Omarbete av Spelens hus hemsida med omarbete och skapandet av
+                  ett helt eget tema och egna blockmallar i Wordpress
+                </li>
+                <li>Fotogalleri</li>
+                <li>
+                  Enklare webapp som agerar regeluppslagsverk till ett spel jag
+                  spelar på min fritid
+                </li>
+              </ul>
+            </li>
           </ul>
         </div>
       </section>
