--- a/index.html
+++ b/index.html
@@ -316,10 +316,12 @@
           </p>
 
           <ul class="byO-projects">
-            <li class="byO-project">Spelens Hus i Norrköping
+            <li class="byO-project">
+              <h3 class="byO-project-title">Spelens Hus i Norrköping</h3>
               <div class="byO-container">
-                <div class="byO-img">
+                <div class="byO-img-container">
                   <img
+                    class="byO-img"
                     src="/src/assets/spelens-hus-norrkoping.png"
                     alt="Spelens Hus i Norrköping"
                   />
@@ -337,12 +339,12 @@
               </div>
             </li>
             <li class="byO-project">
-              <p>In the works</p>
+              <h3 class="byO-project-title">In the works</h3>
               <ul>
                 <li>Bakgrundsväljare till portfolio</li>
                 <li>To-do list som skall ersätta denna lista</li>
                 <li>
-                  Omarbete av Spelens hus hemsida med omarbete och skapandet av
+                  Omarbete av Spelens hus hemsida med skapandet av
                   ett helt eget tema och egna blockmallar i Wordpress
                 </li>
                 <li>Fotogalleri</li>
@@ -423,6 +425,11 @@
               alt="Bild på Jens i de peruanska anderna"
               class="about-img"
             />
+            <p class="about-img-text">
+              BIlden är tagen i ruinstaden Pisac, den sista utposten
+              mellan Cusco och de indianstammar som bodde i de västra delarna
+              av Amazondjungeln från Inkas sida när man skulle korsa Anderna.
+            </p>
           </div>
         </div>
       </section>
@@ -435,11 +442,11 @@
             <a href="mailto:osterqvist@gmail.com">osterqvist@gmail.com</a>
           </p>
           <p>Telefon: <a href="tel:+46768026366"> 0768 02 63 66</a></p>
+          <a
+            href="https://www.linkedin.com/in/jens-%C3%B6sterqvist-8a554a1b0/"
+            >Linkedin</a
+          >
           <div class="social">
-            <a
-              href="https://www.linkedin.com/in/jens-%C3%B6sterqvist-8a554a1b0/"
-              >Linkedin</a
-            >
           </div>
         </div>
       </section>
