background swapper + file format of images fixed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <header>
         <div class="image-wrapper">
-          <img src="./src/assets/abisko1.jpg" alt="" class="header-image" />
+          <img id="ByO-background" src="./src/assets/abisko1.webp" alt="" class="header-image" />
           <div class="image-overlay"></div>
         </div>
         <nav class="menu left">
@@ -126,12 +126,12 @@
                   <div class="shown-img">
                     <img
                       class="case-img first"
-                      src="./src/assets/malmo-desktop.png"
+                      src="./src/assets/malmo-desktop.webp"
                       alt="Bild på Malmö chokladfabriks återförsäljarsida i desktopmiljö."
                     />
                     <img
                       class="case-img"
-                      src="./src/assets/malmo-mobil.png"
+                      src="./src/assets/malmo-mobil.webp"
                       alt="Bild på Malmö chokladfabriks återförsäljarsida i mobilmiljö."
                     />
                   </div>
@@ -169,12 +169,12 @@
                   <div class="shown-img">
                     <img
                       class="case-img first"
-                      src="/src/assets/fitz-start.png"
+                      src="/src/assets/fitz-start.webp"
                       alt="Fitzpatrick startsida"
                     />
                     <img
                       class="case-img"
-                      src="/src/assets/fitz-menu.png"
+                      src="/src/assets/fitz-menu.webp"
                       alt="Fitzpatrick meny"
                     />
                   </div>
@@ -209,12 +209,12 @@
                   <div class="shown-img">
                     <img
                       class="case-img first"
-                      src="/src/assets/bra-desktop.png"
+                      src="/src/assets/bra-desktop.webp"
                       alt=""
                     />
                     <img
                       class="case-img"
-                      src="/src/assets/bra-mobil.png"
+                      src="/src/assets/bra-mobil.webp"
                       alt=""
                     />
                   </div>
@@ -257,17 +257,17 @@
                   <div class="shown-img">
                     <img
                       class="case-img first"
-                      src="/src/assets/sture-start.png"
+                      src="/src/assets/sture-start.webp"
                       alt="Sturebadets startsida"
                     />
                     <img
                       class="case-img"
-                      src="/src/assets/sture-behandlingar.png"
+                      src="/src/assets/sture-behandlingar.webp"
                       alt="sturebadets behandlingssida"
                     />
                     <img
                       class="case-img"
-                      src="/src/assets/sture-mobil.png"
+                      src="/src/assets/sture-mobil.webp"
                       alt="sturebadets mobilsida"
                     />
                   </div>
@@ -322,7 +322,7 @@
                 <div class="byO-img-container">
                   <img
                     class="byO-img"
-                    src="/src/assets/spelens-hus-norrkoping.png"
+                    src="/src/assets/spelens-hus-norrkoping.webp"
                     alt="Spelens Hus i Norrköping"
                   />
                 </div>
@@ -421,7 +421,7 @@
           </div>
           <div class="about-column">
             <img
-              src="/src/assets/jens-i-peru.png"
+              src="/src/assets/jens-i-peru.webp"
               alt="Bild på Jens i de peruanska anderna"
               class="about-img"
             />
@@ -455,7 +455,14 @@
 
       <footer>
         <div class="footer-container">
-          <div class="footer-area left"></div>
+          <div class="footer-area left">
+            <div class="byO-background-swapper">
+              <!--<p class="byO-background-swapper-text">Byt bakgrundsbild</p> -->
+              <img class="byO-background-swapper-thumbnail" src="/src/assets/abisko-thumbnail.webp" alt="Thumbnail för Abisko bakgrundsbild">
+              <img class="byO-background-swapper-thumbnail" src="/src/assets/jotunheimen-thumbnail.webp" alt="Thumbnail för Jotunheimen bakgrundsbild">
+              <img class="byO-background-swapper-thumbnail" src="/src/assets/peru-thumbnail.webp" alt="Thumbnail för Peru Bakgrundsbild">
+            </div>
+          </div>
           <div class="footer-area"></div>
           <div class="footer-area right">
             <p class="cc">Produced by: Jens Österqvist</p>
