--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
             <li class="byO-project">
               <h3 class="byO-project-title">In the works</h3>
               <ul>
-                <li>Bakgrundsväljare till portfolio</li>
+                <li class="completed">Bakgrundsväljare till portfolio</li>
                 <li>To-do list som skall ersätta denna lista</li>
                 <li>
                   Omarbete av Spelens hus hemsida med skapandet av
