--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
       <section id="section2" class="section project-wrapper">
         <div class="section-content">
-          <h2>FreelanceProjekt</h2>
+          <h2>Egna projekt</h2>
           <p>
             Nedan följer exempel på projekt jag driver framåt på min fritid.
           </p>
