--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
       <main>
         <div id="MainText" class="text-container">
-          <h1 class="title">Jens Österqvist</h1>
+          <h1 class="title"><span>Jens Österqvist</span></h1>
           <p>Välkommen till min portfolio</p>
           <p>Jag brinner för programmering, teknik och naturen.</p>
           <p>
@@ -317,7 +317,7 @@
 
           <ul class="byO-projects">
             <li class="byO-project">
-              <h3 class="byO-project-title">Spelens Hus i Norrköping</h3>
+              <h3 class="byO-project-title"><a href="www.spslenshus011.se">Spelens Hus i Norrköping</a></h3>
               <div class="byO-container">
                 <div class="byO-img-container">
                   <img
